Code format on whole project