@@ -56,9 +56,8 @@ public class SalesServiceImpl implements SalesService {
         if (customer.getLdapGroups().contains(LDAPGroup.BESTUUR)) {
             return eventService.getUpcoming();
         } else {
-            return eventService.getUpcoming().stream()
-                    .filter(events -> customer.getLdapGroups().contains(events.getOrganizedBy()))
-                    .collect(Collectors.toList());
+            return eventService.getUpcoming().stream().filter(events -> customer.getLdapGroups().contains(events.getOrganizedBy())).collect(Collectors
+                                                                                                                                                    .toList());
         }
     }
 
@@ -71,8 +70,7 @@ public class SalesServiceImpl implements SalesService {
     public List<Product> getAllGrantedProductByCustomer(Customer customer) {
         List<Event> events = this.getAllGrantedEventByCustomer(customer);
 
-        return events.stream().flatMap(event -> event.getProducts().stream())
-                .filter(product -> LocalDateTime.now().isAfter(product.getSellStart()) && LocalDateTime.now().isBefore(product.getSellEnd()))
-                .collect(Collectors.toList());
+        return events.stream().flatMap(event -> event.getProducts().stream()).filter(product -> LocalDateTime.now()
+                .isAfter(product.getSellStart()) && LocalDateTime.now().isBefore(product.getSellEnd())).collect(Collectors.toList());
     }
 }
